<resources>
    <string name="app_name">Jasmin</string>
    <string name="action_settings">Settings</string>

    <!--Intro -->
    <string name="intro_service_name">Jasmin</string>
    <string name="intro_service_name_detail">서비스에 대한 간략한 설명</string>
    <string name="intro_register">이메일로 가입하기</string>
    <string name="intro_register_already">이미 Jasmin 계정이 있으신가요?</string>
    <string name="intro_login">로그인 하러 가기!</string>
    <!--Regist -->
    <string name="regist_regist">회원가입</string>
    <string name="regist_email">이메일 주소</string>
    <string name="regist_domail">도메인</string>
    <string name="regist_do_mail_auth">메일 인증 하기</string>
    <string name="regist_msg_input_authcode">인증번호를 입력해주세요.</string>
    <string name="regist_msg_not_auth">인증되지 않은 메일입니다.</string>
    <string name="regist_regist_password">비밀번호</string>
    <string name="regist_password_8to12">비밀번호 (8 ~ 12자)</string>
    <string name="regist_password_8to12_check">비밀번호 확인 (8 ~ 12자)</string>
    <string name="regist_name">이름</string>
    <string name="regist_sex">성별</string>
    <string name="regist_male">남</string>
    <string name="regist_female">여</string>
    <string name="regist_do_register">회원가입 하기</string>

    <!--userInfo modify-->
    <string name="edit_info_dialog_err">오류</string>
    <string name="edit_info_dialog_err_pw">비밀번호를 입력해주세요</string>

    <!--regist_dialog-->
    <string name="regist_dialog_auth">입력하신 메일로 인증번호를 전송하였습니다.</string>
    <string name="regist_dialog_input_error">작성하지 않은 항목이 있습니다.</string>
    <string name="regist_dialog_mailform">이메일 형식이 맞지 않습니다.</string>
    <string name="regist_dialog_pw_disharmony">비밀번호가 일치하지 않습니다.</string>
    <string name="regist_dialog_more8">비밀번호를 8자리 이상 입력하여주세요.</string>
    <string name="regist_dialog_name">이름을 입력하여 주세요</string>
    <string name="regist_dialog_sex">성별을 선택하여 주세요.</string>
    <string name="regist_dialog_title">입력 오류</string>
    <string name="regist_dialog_ok">회원가입을 축하합니다.</string>

    <!--Login -->
    <string name="login_login">로그인</string>
    <string name="login_email">이메일</string>
    <string name="login_input_email">가입한 이메일 입력</string>
    <string name="login_send_email">비밀번호 이메일 전송</string>
    <string name="login_password">비밀번호</string>
    <string name="login_save_id">아이디 저장</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_find_password"><u> 비밀번호를 잊으셨나요? </u></string>
    <string name="login_find_password_title">비밀번호 찾기</string>
    <string name="login_kakao">카카오계정으로 로그인</string>
    <string name="temp_password">임시 비밀번호 전송</string>

    <!--Home -->
    <string name="make_study">스터디 만들기</string>
    <string name="enroll_study">스터디 가입하기</string>

    <!-- add_group -->
    <string name="study_name">스터디 이름</string>
    <string name="study_introduce">스터디소개</string>
    <string name="study_cover">스터디 커버사진</string>
    <string name="select_album">사진 앨범에서 선택</string>
    <string name="select_default">기본 이미지 선택</string>
    <string name="complete">완료</string>

    <!-- group_invite -->
    <string name="invite_title">스터디 초대하기</string>
    <string name="invite_msg">스터디에 함께할 멤버를 초대하세요!</string>
    <string name="invite_link">초대 링크 복사</string>
    <string name="invite">초대</string>
    <string name="invite_SMS">문자</string>
    <string name="kakaotalk">카카오톡</string>
    <string name="customer_service">고객 센터</string>
    <string name="setting">설정</string>

    <!-- group_notice -->
    <string name="notice_group">그룹 게시판</string>
    <string name="notice_no">No</string>
    <string name="notice_title">제목</string>
    <string name="notice_date">작성일</string>
    <string name="notice_writer">작성자</string>
    <string name="notice_views">조회수</string>

    <!-- group_notice_detail -->
    <string name="detail_attachment">첨부파일</string>

    <!-- alert_dialog -->
    <string name="dialog_title">Alert </string>
    <string name="dialog_msg">2015년 06월 26일 최유정님의 지각벌금 1000원을 수령 확인하시겠습니까? </string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- list_reply -->
    <string name="reply_title">댓글</string>
    <string name="reply_id">아이디</string>
    <string name="reply_content">내용</string>
    <string name="reply_enroll_msg">댓글을 남겨보세요.</string>
    <string name="reply_enroll">등록</string>

    <string name="reply_update_title">댓글 수정</string>

    <string name="enroll_title">가입하기</string>
    <string name="join_msg">코드를 입력하여 주세요.</string>

    <!-- list_management -->
    <string name="manage_attendance">출결</string>
    <string name="manage_assignment">과제</string>
    <string name="manage_receivables">미수금</string>
    <string name="manage_moneybook">머니북</string>
    <string name="manage_do_attendance">출석체크하기</string>
    <string name="manage_do_assignment">과제체크하기</string>
    <string name="manage_money_ect">기타입/출금</string>

    <!-- attendance_check -->
    <string name="attendance_title">출석체크</string>
    <string name="attendance_check">출석</string>
    <string name="attendance_late">지각</string>
    <string name="attendance_min">분</string>
    <string name="attendance_ok">확인</string>
    <string name="attendance_cancel">취소</string>
    <string name="attendance_delete_title">출석</string>
    <string name="attendance_delete_comment">출석 정보를 삭제하시겠습니까?</string>

    <!-- assignment_check -->
    <string name="assignment_title">과제체크</string>
    <string name="assignment_submit_all">전체 제출</string>
    <string name="assignment_submit">제출</string>
    <string name="assignment_submit_not">미제출</string>

    <!-- moneybook_dialog -->
    <string name="moneybook_add">추가</string>
    <string name="moneybook_deposit">입금</string>
    <string name="moneybook_withdraw">출금</string>
    <string name="moneybook_money">금액</string>
    <string name="moneybook_comment">내역</string>
    <string name="moneybook_date">일자</string>
    <!--study_info -->
    <string name="info_study">스터디 정보</string>
    <string name="info_member">멤버 정보</string>
    <string name="member">멤버</string>
    <string name="info_count">(0)</string>
    <string name="info_member_invite">멤버 초대</string>
    <string name="info_member_add">멤버 추가</string>
    <string name="info_penalty">벌금</string>
    <string name="info_attendance">출결</string>s
    <string name="info_moneybook">머니북</string>

    <!--group setting -->
    <string name="setting_assignmentList">과제 목록</string>
    <string name="setting_assignmentAdd">과제 추가</string>
    <string name="setting_assignment_name">과제 이름</string>
    <string name="setting_assignment_msg">과제 내용</string>
    <string name="setting_assignment_enddate">마감일</string>
    <string name="setting_group_info">스터디 정보 수정</string>
    <string name="setting_group_penalty">벌금 정보 수정</string>
    <string name="setting_authority_sharing">권한 공유</string>
    <string name="setting_authority_delegation">권한 위임</string>
    <string name="setting_authority_delete">권한 삭제</string>

    <!--study_info-->
    <string name="study_info_name">스터디 이름</string>
    <string name="study_info_introduce">스터디 소개</string>
    <string name="study_info_deposit">디파짓 유무</string>
    <string name="study_info_deposit_default">기본 디파짓</string>
    <string name="study_info_penalty_absent">결석 벌금</string>
    <string name="study_info_penalty_tardy">지각 벌금</string>
    <string name="study_info_tardy_max">최대 지각 시간</string>

    <string name="btn_cancel">취소</string>

    <string name="menu_ok">확인</string>
    <string name="menu_file">파일</string>
    <string name="menu_modify">수정</string>
    <string name="menu_delete">삭제</string>
    <string name="menu_reply">댓글</string>
    <string name="menu_favorite">즐겨찾기</string>

    <string name="list_empty">데이터가 없습니다.</string>

    <string name="internal_storage">internal_storage</string>


    <!--Alarm-->
    <string name="alarm_add_btn_update">수정완료</string>
    <string name="alarm_add_btn_new">추가하기</string>
    <string name="alarm_add_vali_dialog_title">알림 입력 오류</string>
    <string name="alarm_add_vali_dialog_comment">내용을 입력해주세요.</string>
    <string name="alarm_add_success_dialog_title">성공</string>
    <string name="alarm_add_success__dialog_comment">성공했어요</string>

    <string name="group_setting_secede_manager_fail_title">실패</string>
    <string name="group_setting_secede_manager_fail">관리자 권한을 가진 유저는 스터디를 탈퇴 할 수 없습니다.</string>

    <!-- ///////////////////////////////////test/////////////////////////////////////-->

    <string name="connecting">연결중 입니다...</string>

    <string name="season">시즌</string>
    <string name="season_prompt">시즌 선택</string>
    <string-array name="season_array">
        <item>봄</item>
        <item>여름</item>
        <item>가을</item>
        <item>겨울</item>
    </string-array>

</resources>
