<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_do_register"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/regist_mail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_gray"
            android:hint="@string/regist_email"
            android:text="test@test.com"
            android:paddingLeft="30dp" />


        <Button
            android:id="@+id/btn_mail_auth"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_bora"
            android:text="@string/regist_do_mail_auth"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/regist_pw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_gray"
            android:hint="@string/regist_password_8to12"
            android:inputType="textPassword"
            android:maxLength="12"
            android:text="11111111"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/regist_pw_check"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_gray"
            android:hint="@string/regist_password_8to12_check"
            android:inputType="textPassword"
            android:text="11111111"
            android:maxLength="12"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/regist_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_gray"
            android:privateImeOptions="defaultInputmode=korea"
            android:hint="@string/regist_name"
            android:text="11111111"
            android:paddingLeft="30dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radio_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_male"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_female"
                    android:textColor="@color/colorWhite" />

            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_do_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_green"
        android:text="@string/regist_do_register"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</RelativeLayout>
