<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.study.jasmin.jasmin.ui.activity.GroupStudyInfoActivity">

    <TextView
        android:id="@+id/info_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/member" />

    <TextView
        android:id="@+id/info_member_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/info_member"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/info_member"
        android:text="@string/info_count" />

    <ListView
        android:id="@+id/lv_member"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info_member"
        android:layout_above="@+id/btn_invite_member"/>

    <Button
        android:id="@+id/btn_invite_member"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/btn_complete"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_bora"
        android:text="@string/info_member_invite"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_green"
        android:text="@string/complete"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</RelativeLayout>